--- a/form.html
+++ b/form.html
@@ -47,12 +47,17 @@
 			<input type="radio" name='gender' value='m' checked>Male
 			<input type="radio" name='gender' value='f' checked>Female
 			
+			
 			<br>
 			<label>gender</label><br>
 			<input type="checkbox" name='gender' value='m'>Male
 			<input type="checkbox" name='gender' value='f' checked>Female
 			<input type="checkbox" name='gender' value='m'>Male
 			<input type="checkbox" name='gender' value='f' checked>Female
+			
+			<br>
+			<label>file</label>
+			<input type="file" accept='image/*'>
 			
 			<br>
 			<label>City</label>
