--- a/css/welcome3.html
+++ b/css/welcome3.html
@@ -2,7 +2,7 @@
 	<head>
 		<style>
 			h1{
-				color:yellow;
+				color:purple;
 				
 			}
 			#special{
@@ -16,8 +16,8 @@
 		<link href='welcome.css' rel='stylesheet' type="text/css">
 	</head>
 	<body>
-		<h1 style="color:red;">welcome to css</h1>
-		<p>this is  p tag</p>
+		<h1 style="color:red;">welcome 3 to css</h1>
+		<p class='success'>this is  p tag</p>
 		<h1 id="special">this is special h1</h1>
 		<h1>second h1 tag</h1>
 		<h1 class='orange'> *** h1 tag</h1>
