--- a/font.html
+++ b/font.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<font color="red" size=50 face="arial" weight=500>
+		<font color="red" size=50 face="arial">
 			welcome
 		</font>
 	</body>
