--- a/js/for.html
+++ b/js/for.html
@@ -1,13 +1,21 @@
 <html>
 	<body>
 		<script>
-			var no=15;
-			document.write("<table border=1>");
-			for(i=1;i<=10;i++)
+			function table(no)
 			{
-				document.write("<tr><td>" + i*no + "</td></tr>");
+			//	var no=15;
+				document.write("<table border=1 bgcolor='red'>");
+				for(i=1;i<=10;i++)
+				{
+					document.write("<tr><td>" + i*no + "</td></tr>");
+				}
+				document.write("</table>");
+			
 			}
-			document.write("</table>");
+			table(12);
+			table(15);
+			table(20)
+			
 		</script>
 	</body>
 </html>
